# novada-python

./: .gitignore  LICENSE  PLAN.md  PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: proxy.py  scraper.py  wallet.py
scripts/: sync_reference.sh
src/novada/: __init__.py  _decode.py  _envelope.py  _transport.py  _version.py  client.py  errors.py
src/novada/proxy/: __init__.py  _base.py  account.py  dedicated.py  mobile.py  prohibit_domain.py  residential.py  rotating.py  static.py  types.py  unlimited.py  whitelist.py
src/novada/scraper/: __init__.py  _base.py  api.py  browser.py  types.py  unblocker.py  universal.py
src/novada/wallet/: __init__.py  types.py
tests/: conftest.py  test_integration.py  test_proxy_services.py  test_proxy_whitelist_account.py  test_scraper.py  test_transport.py  test_wallet.py
